<resources>
    <string name="app_name">user</string>
    <string name="title_activity_user_main">UserMainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="click_here_to_add_contacts">Click here to add Contacts....</string>


    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="enter_email_here">Enter email address</string>
    <string name="enter_password_address">Enter Password here</string>
    <string name="signup">signup</string>
    <string name="signin">signin</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="contact_no">Contact No.</string>
    <string name="aadhaar_no">Aadhaar No.</string>
    <string name="age">Age</string>
    <string name="next">next</string>
    <string name="message">Message</string>
    <string name="call">CAll</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="send_notification">Send Notification</string>
    <string name="add_contact_1">add contact 1</string>
    <string name="add_contact_2">add contact 2</string>
    <string name="add_contact_3">add contact 3</string>
    <string name="done">Done</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify">verify</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <string name="search">Search</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="next1">Next</string>
    <string name="add_image">Add Image</string>
    <string name="add_adhar_card">add Adhar Card</string>
    <string name="add_licence">add Licence</string>
    <string name="add_rc_book">add RC book</string>
    <string name="view">View</string>
    <string name="adhar_card">Adhar Card :</string>
    <string name="licence">Licence :</string>
    <string name="rcbook">RCbook :</string>
    <string name="name">Name       :</string>
    <string name="vehical_no">Vehical no.:</string>
    <string name="challan_detail">Challan Detail</string>
    <string name="online_challan_payment">Online Challan Payment</string>
    <string name="report_accidents">Report Accidents</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Profile">Profile</string>
    <string name="addcontacts">Add Contacts</string>
    <string name="addprofileimage">Add Profile Image</string>
    <string name="accountverifiacation">Account Verification</string>
    <string name="reportaccident">Report Accident</string>
    <string name="sendnotification">Send Notification</string>
    <string name="challandetails">Challan Details</string>
    <string name="uploadsdocument">Upload Documents</string>
    <string name="viewdocument">View Documents</string>
    <string name="noparkingreport">No Parking Report</string>
    <string name="noparkingsearch">No Parking Search</string>
</resources>
