<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="20dp"
   android:paddingTop="100dp"

    tools:context="com.krishbarcode.firebase_realtime.MainActivity">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"

            android:hint="@string/enter_email_here"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                android:id="@+id/pass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="textPassword"
                android:textColorHint="@color/hint"
                android:hint="@string/enter_password_address"
                android:textSize="20sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/but_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/pass1"
                android:layout_alignLeft="@+id/email1"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/pass1"
                android:layout_alignStart="@+id/email1"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_marginBottom="159dp"
                android:layout_weight="1"
                android:background="@drawable/button_rounded"

                android:text="@string/signup"

                android:textColor="@color/buttontxt"
                android:textSize="20sp" />
            <Button
                android:layout_weight="1"
                android:id="@+id/but_signin"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/pass1"
                android:layout_alignLeft="@+id/email1"
                android:layout_alignParentBottom="true"
                android:textColor="@color/buttontxt"
                android:background="@drawable/button_rounded"
                android:textSize="20sp"
                android:layout_alignRight="@+id/pass1"
                android:layout_alignStart="@+id/email1"
                android:layout_marginBottom="159dp"

                android:text="@string/signin"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

